--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "~1.7.8"
+  },
+  "dependencies": {
+    "bootstrap": "^4.0.0-beta.3",
+    "electron-tabs": "^0.9.0"
   }
 }
